# SimpleServer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  buildBydocker.sh  change_menu.md  start.sh
code/: main.cpp
code/http/: httpconnect.cpp  httprequest.cpp  httpresponse.cpp  httpresponse.h
code/server/: webserver.cpp
resources/: 400.html  403.html  404.html  405.html  download.html  error.html  index.html  list.json  login.html  picture.html  register.html  response.txt  upload.html  video.html  welcome.html
resources/files/: 项目介绍.md
resources/img/: yy.html
resources/js/: zyupload.basic-1.0.0.js
